--- a/Client/src/view/movie.fxml
+++ b/Client/src/view/movie.fxml
@@ -11,41 +11,41 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/17" fx:controller="view.MovieViewController" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="123.0" fitWidth="151.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../../../../../../Users/mihai/OneDrive/Pictures/Capturi%20de%20ecran/static-assets-upload18317064924267626703.gif" />
+            <Image />
          </image>
       </ImageView>
       <Label layoutX="176.0" layoutY="25.0" text="Title:" />
-      <Label layoutX="206.0" layoutY="24.0" prefHeight="18.0" prefWidth="301.0" text="Label" />
+      <Label fx:id="title" layoutX="206.0" layoutY="24.0" prefHeight="18.0" prefWidth="301.0" text="Label" />
       <Label layoutX="173.0" layoutY="51.0" text="Length:" />
-      <Label layoutX="222.0" layoutY="50.0" prefHeight="18.0" prefWidth="142.0" text="Label" />
+      <Label fx:id="length" layoutX="222.0" layoutY="50.0" prefHeight="18.0" prefWidth="142.0" text="Label" />
       <Label layoutX="170.0" layoutY="78.0" text="Director:" />
-      <Label layoutX="222.0" layoutY="77.0" prefHeight="18.0" prefWidth="302.0" text="Label" />
+      <Label fx:id="director" layoutX="222.0" layoutY="77.0" prefHeight="18.0" prefWidth="302.0" text="Label" />
       <Label layoutX="14.0" layoutY="186.0" text="Description:" />
-      <Label alignment="TOP_LEFT" layoutX="15.0" layoutY="204.0" prefHeight="60.0" prefWidth="620.0" text="Label" />
-      <ProgressBar layoutX="22.0" layoutY="162.0" prefWidth="200.0" progress="0.8" />
+      <Label fx:id="description" alignment="TOP_LEFT" layoutX="15.0" layoutY="204.0" prefHeight="60.0" prefWidth="620.0" text="Label" />
+      <ProgressBar fx:id="progressBar" layoutX="22.0" layoutY="162.0" prefWidth="200.0" progress="0.8" />
       <Label layoutX="11.0" layoutY="163.0" text="0" />
       <Label layoutX="234.0" layoutY="163.0" text="5" />
-      <Label layoutX="108.0" layoutY="145.0" text="Label" />
-      <Button layoutX="596.0" layoutY="3.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="53.0" text="&lt;-">
+      <Label fx:id="averageRating" layoutX="108.0" layoutY="145.0" text="Label" />
+      <Button onAction="#goBackPressed" layoutX="596.0" layoutY="3.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="53.0" text="&lt;-">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button layoutX="545.0" layoutY="300.0" mnemonicParsing="false" text="Leave review" />
-      <TextArea layoutX="20.0" layoutY="299.0" prefHeight="50.0" prefWidth="520.0" />
+      <Button onAction="#leaveReviewPressed" layoutX="545.0" layoutY="300.0" mnemonicParsing="false" text="Leave review" />
+      <TextArea fx:id="comment" layoutX="20.0" layoutY="299.0" prefHeight="50.0" prefWidth="520.0" />
       <RadioButton layoutX="38.0" layoutY="273.0" mnemonicParsing="false" text="0" />
       <RadioButton layoutX="75.0" layoutY="273.0" mnemonicParsing="false" text="1" />
       <RadioButton layoutX="114.0" layoutY="273.0" mnemonicParsing="false" text="2" />
       <RadioButton layoutX="150.0" layoutY="273.0" mnemonicParsing="false" text="3" />
       <RadioButton layoutX="191.0" layoutY="273.0" mnemonicParsing="false" text="4" />
       <RadioButton layoutX="227.0" layoutY="273.0" mnemonicParsing="false" text="5" />
-      <ListView layoutX="22.0" layoutY="370.0" prefHeight="230.0" prefWidth="600.0" />
+      <ListView fx:id="comments" layoutX="22.0" layoutY="370.0" prefHeight="230.0" prefWidth="600.0" />
       <Label layoutX="248.0" layoutY="163.0" text="out of " />
-      <Label layoutX="288.0" layoutY="163.0" text="Label" />
+      <Label fx:id="numberOfReviews" layoutX="288.0" layoutY="163.0" text="Label" />
       <Label layoutX="325.0" layoutY="163.0" text="reviews" />
    </children>
 </AnchorPane>
