--- a/Client/src/view/movie.fxml
+++ b/Client/src/view/movie.fxml
@@ -6,18 +6,11 @@
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/17" fx:controller="view.MovieViewController" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.MovieViewController">
    <children>
-      <ImageView fitHeight="123.0" fitWidth="151.0" layoutX="14.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image />
-         </image>
-      </ImageView>
       <Label layoutX="176.0" layoutY="25.0" text="Title:" />
       <Label fx:id="title" layoutX="206.0" layoutY="24.0" prefHeight="18.0" prefWidth="301.0" text="Label" />
       <Label layoutX="173.0" layoutY="51.0" text="Length:" />
@@ -30,12 +23,12 @@
       <Label layoutX="11.0" layoutY="163.0" text="0" />
       <Label layoutX="234.0" layoutY="163.0" text="5" />
       <Label fx:id="averageRating" layoutX="108.0" layoutY="145.0" text="Label" />
-      <Button onAction="#goBackPressed" layoutX="596.0" layoutY="3.0" mnemonicParsing="false" prefHeight="18.0" prefWidth="53.0" text="&lt;-">
+      <Button layoutX="596.0" layoutY="3.0" mnemonicParsing="false" onAction="#goBackPressed" prefHeight="18.0" prefWidth="53.0" text="&lt;-">
          <font>
             <Font size="20.0" />
          </font>
       </Button>
-      <Button onAction="#leaveReviewPressed" layoutX="545.0" layoutY="300.0" mnemonicParsing="false" text="Leave review" />
+      <Button layoutX="545.0" layoutY="300.0" mnemonicParsing="false" onAction="#leaveReviewPressed" text="Leave review" />
       <TextArea fx:id="comment" layoutX="20.0" layoutY="299.0" prefHeight="50.0" prefWidth="520.0" />
       <RadioButton layoutX="38.0" layoutY="273.0" mnemonicParsing="false" text="0" />
       <RadioButton layoutX="75.0" layoutY="273.0" mnemonicParsing="false" text="1" />
@@ -47,5 +40,6 @@
       <Label layoutX="248.0" layoutY="163.0" text="out of " />
       <Label fx:id="numberOfReviews" layoutX="288.0" layoutY="163.0" text="Label" />
       <Label layoutX="325.0" layoutY="163.0" text="reviews" />
+      <Label fx:id="errorLabel" layoutX="270.0" layoutY="273.0" prefHeight="18.0" prefWidth="267.0" text="errorLabel" textFill="RED" />
    </children>
 </AnchorPane>
