--- a/Client/src/view/start.fxml
+++ b/Client/src/view/start.fxml
@@ -28,7 +28,8 @@
                   <TextField fx:id="usernameLogin" maxWidth="200.0" minWidth="200.0" prefHeight="26.0" prefWidth="200.0" promptText="username" VBox.vgrow="NEVER" />
                   <PasswordField fx:id="passwordLogin" maxWidth="200.0" prefWidth="200.0" promptText="password" />
                   <Label fx:id="errorLabelLogin" prefHeight="3.0" prefWidth="200.0" text="error" textFill="RED" />
-                  <Button onAction="#loginPressed" mnemonicParsing="false" prefHeight="35.0" prefWidth="80.0" text="Log in" />
+                  <Button mnemonicParsing="false" onAction="#loginPressed" prefHeight="35.0" prefWidth="80.0" text="Log in" />
+                  <Label fx:id="dateLabel" disable="true" opacity="0.0" prefHeight="17.0" prefWidth="240.0" text="Label" />
                </children>
             </VBox>
             <VBox alignment="TOP_CENTER" prefHeight="422.0" prefWidth="340.0" spacing="10.0">
@@ -45,7 +46,7 @@
                   <PasswordField fx:id="passwordSignup" maxWidth="200.0" promptText="password" />
                   <DatePicker fx:id="dob" promptText="date of birth" />
                   <Label fx:id="errorDob" maxWidth="200.0" text="error" textFill="RED" />
-                  <Button onAction="#signupPressed" mnemonicParsing="false" prefHeight="35.0" prefWidth="80.0" text="Sing up" />
+                  <Button mnemonicParsing="false" onAction="#signupPressed" prefHeight="35.0" prefWidth="80.0" text="Sing up" />
                </children>
             </VBox>
          </children>
