--- a/Client/src/view/start.fxml
+++ b/Client/src/view/start.fxml
@@ -41,11 +41,10 @@
                   </Label>
                   <TextField fx:id="name" maxWidth="200.0" promptText="full name" />
                   <TextField fx:id="usernameSignup" maxWidth="200.0" promptText="username" />
-                  <Label fx:id="errorUsername" prefHeight="4.0" prefWidth="200.0" text="error" textFill="RED" />
                   <TextField fx:id="phoneNumber" maxWidth="200.0" promptText="phone number" />
                   <PasswordField fx:id="passwordSignup" maxWidth="200.0" promptText="password" />
                   <DatePicker fx:id="dob" promptText="date of birth" />
-                  <Label fx:id="errorDob" maxWidth="200.0" text="error" textFill="RED" />
+                  <Label fx:id="errorSignup" maxWidth="200.0" text="error" textFill="RED" />
                   <Button mnemonicParsing="false" onAction="#signupPressed" prefHeight="35.0" prefWidth="80.0" text="Sing up" />
                </children>
             </VBox>
