--- a/Client/src/view/Top-Rated_Movies.fxml
+++ b/Client/src/view/Top-Rated_Movies.fxml
@@ -13,7 +13,7 @@
             <Font size="50.0" />
          </font>
       </Text>
-      <ListView layoutX="54.0" layoutY="124.0" prefHeight="456.0" prefWidth="420.0" />
+      <ListView fx:id="topratedList" layoutX="54.0" layoutY="124.0" prefHeight="456.0" prefWidth="420.0" />
       <Button fx:id="viewMovieDetails" layoutX="501.0" layoutY="158.0" mnemonicParsing="false" text="View movie details" />
    </children>
 </AnchorPane>
