--- a/Client/src/view/admin.fxml
+++ b/Client/src/view/admin.fxml
@@ -8,39 +8,44 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="531.0" prefWidth="600.0" spacing="10.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="view.AdminViewController">
    <children>
-      <ListView prefHeight="174.0" prefWidth="606.0" />
-      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="600.0" spacing="200.0">
+      <ListView fx:id="list" prefHeight="174.0" prefWidth="606.0" />
+      <HBox alignment="CENTER" prefHeight="50.0" prefWidth="600.0" spacing="100.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="70.0" text="Add" />
-            <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="70.0" text="Remove" />
+            <Button mnemonicParsing="false" onAction="#addPressed" prefHeight="40.0" prefWidth="70.0" text="Add" />
+            <Button mnemonicParsing="false" onAction="#editPressed" prefHeight="40.0" prefWidth="70.0" text="Edit" />
+            <Button mnemonicParsing="false" onAction="#removePressed" prefHeight="40.0" prefWidth="70.0" text="Remove" />
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="40.0" prefWidth="600.0" spacing="50.0">
          <children>
             <Label text="Title" />
-            <TextField prefHeight="26.0" prefWidth="206.0" />
+            <TextField fx:id="title" prefHeight="26.0" prefWidth="206.0" />
             <Label text="Length" />
-            <TextField />
+            <TextField fx:id="length" />
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="40.0" prefWidth="200.0" spacing="50.0">
          <children>
             <Label text="Director" />
-            <TextField prefHeight="26.0" prefWidth="201.0" />
+            <TextField fx:id="director" prefHeight="26.0" prefWidth="201.0" />
             <Label text="Average rating" />
-            <TextField prefHeight="26.0" prefWidth="89.0" />
+            <TextField fx:id="avgRating" prefHeight="26.0" prefWidth="89.0" />
          </children>
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="582.0" spacing="50.0">
          <children>
             <Label text="Description" />
-            <TextArea prefHeight="100.0" prefWidth="400.0" />
+            <TextArea fx:id="description" prefHeight="100.0" prefWidth="400.0" />
          </children>
       </HBox>
-      <Label prefHeight="18.0" prefWidth="266.0" text="error label" textFill="RED" />
-      <Button mnemonicParsing="false" prefHeight="45.0" prefWidth="89.0" text="Go back" />
+      <Label fx:id="errorLabel" prefHeight="18.0" prefWidth="266.0" text="error label" textFill="RED" />
+      <HBox alignment="CENTER" prefHeight="46.0" prefWidth="600.0" spacing="400.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#goBackPressed" prefHeight="45.0" prefWidth="89.0" text="Go back" />
+            <Button mnemonicParsing="false" onAction="#finishEditPressed" prefHeight="45.0" prefWidth="90.0" text="Finish Edit" />
+         </children>
+      </HBox>
    </children>
 </VBox>
