--- a/Client/src/view/movie.fxml
+++ b/Client/src/view/movie.fxml
@@ -35,11 +35,7 @@
       <Label fx:id="numberOfReviews" layoutX="288.0" layoutY="163.0" text="Label" />
       <Label layoutX="325.0" layoutY="163.0" text="reviews" />
       <Label fx:id="errorLabel" layoutX="302.0" layoutY="265.0" prefHeight="18.0" prefWidth="267.0" text="errorLabel" textFill="RED" />
-      <Button fx:id="rentButton" layoutX="425.0" layoutY="159.0" mnemonicParsing="false" onAction="#rentPressed" prefHeight="43.0" prefWidth="91.0" text="Rent movie">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Button>
+      <Button fx:id="rentButton" layoutX="425.0" layoutY="159.0" mnemonicParsing="false" onAction="#rentPressed" prefHeight="43.0" prefWidth="91.0" text="Rent movie" />
       <HBox layoutX="26.0" layoutY="257.0" prefHeight="34.0" prefWidth="241.0">
          <children>
             <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="39.0" text="0" />
@@ -50,5 +46,6 @@
             <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="39.0" text="5" />
          </children>
       </HBox>
+      <Button layoutX="525.0" layoutY="159.0" fx:id="cancelButton" onAction="#cancelPressed" mnemonicParsing="false" prefHeight="43.0" prefWidth="91.0" text="Cancel rental" />
    </children>
 </AnchorPane>
