--- a/Client/src/view/start.fxml
+++ b/Client/src/view/start.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -43,7 +42,7 @@
                   <TextField fx:id="usernameSignup" maxWidth="200.0" promptText="username" />
                   <TextField fx:id="phoneNumber" maxWidth="200.0" promptText="phone number" />
                   <PasswordField fx:id="passwordSignup" maxWidth="200.0" promptText="password" />
-                  <DatePicker fx:id="dob" promptText="date of birth" />
+                  <TextField maxWidth="100.0" promptText="age" />
                   <Label fx:id="errorSignup" maxWidth="200.0" text="error" textFill="RED" />
                   <Button mnemonicParsing="false" onAction="#signupPressed" prefHeight="35.0" prefWidth="80.0" text="Sing up" />
                </children>
