--- a/Server/src/view/movie.fxml
+++ b/Server/src/view/movie.fxml
@@ -28,26 +28,27 @@
             <Font size="20.0" />
          </font>
       </Button>
-      <Button layoutX="551.0" layoutY="319.0" mnemonicParsing="false" onAction="#leaveReviewPressed" text="Leave review" />
+      <Button fx:id="reviewButton" layoutX="551.0" layoutY="319.0" mnemonicParsing="false" onAction="#leaveReviewPressed" text="Leave review" />
       <TextArea fx:id="comment" layoutX="20.0" layoutY="319.0" prefHeight="50.0" prefWidth="520.0" />
       <ListView fx:id="comments" layoutX="22.0" layoutY="382.0" prefHeight="218.0" prefWidth="600.0" />
       <Label layoutX="248.0" layoutY="163.0" text="out of " />
       <Label fx:id="numberOfReviews" layoutX="288.0" layoutY="163.0" text="Label" />
       <Label layoutX="325.0" layoutY="163.0" text="reviews" />
-      <Label fx:id="errorLabel" layoutX="291.0" layoutY="282.0" prefHeight="18.0" prefWidth="267.0" text="errorLabel" textFill="RED" />
+      <Label fx:id="errorLabel" layoutX="357.0" layoutY="282.0" prefHeight="18.0" prefWidth="267.0" text="errorLabel" textFill="RED" />
       <Button fx:id="rentButton" layoutX="425.0" layoutY="159.0" mnemonicParsing="false" onAction="#rentPressed" prefHeight="43.0" prefWidth="91.0" text="Rent movie" />
       <HBox layoutX="22.0" layoutY="274.0" prefHeight="34.0" prefWidth="241.0">
          <children>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="39.0" text="0" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="39.0" text="1" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="39.0" text="2" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="39.0" text="3" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="39.0" text="4" />
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="39.0" text="5" />
+            <Button fx:id="star0" mnemonicParsing="false" onAction="#star0Pressed" prefHeight="26.0" prefWidth="39.0" text="0" />
+            <Button fx:id="star1" mnemonicParsing="false" onAction="#star1Pressed" prefHeight="26.0" prefWidth="39.0" text="1" />
+            <Button fx:id="star2" mnemonicParsing="false" onAction="#star2Pressed" prefHeight="26.0" prefWidth="39.0" text="2" />
+            <Button fx:id="star3" mnemonicParsing="false" onAction="#star3Pressed" prefHeight="26.0" prefWidth="39.0" text="3" />
+            <Button fx:id="star4" mnemonicParsing="false" onAction="#star4Pressed" prefHeight="26.0" prefWidth="39.0" text="4" />
+            <Button fx:id="star5" mnemonicParsing="false" onAction="#star5Pressed" prefHeight="26.0" prefWidth="39.0" text="5" />
          </children>
       </HBox>
       <Button fx:id="cancelButton" layoutX="525.0" layoutY="159.0" mnemonicParsing="false" onAction="#cancelPressed" prefHeight="43.0" prefWidth="91.0" text="Cancel rental" />
       <Label layoutX="172.0" layoutY="102.0" text="Release year:" />
       <Label fx:id="releaseYear" layoutX="248.0" layoutY="102.0" prefHeight="18.0" prefWidth="63.0" text="Label" />
+      <Label fx:id="star" layoutX="279.0" layoutY="282.0" opacity="0.0" text="Label" />
    </children>
 </AnchorPane>
